# AI-Engineering-Bootcamp

./: .env  .gitignore  LangGraph_Tracker.html  README.md  pyproject.toml  requirements.txt
_01_Langchain-Crash-course/: 1-langchainintro.ipynb  2-Modelintegration.ipynb  3-Tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb  README.md
_02_Agentic-Langgraph-Crash-course/: README.md
_02_Agentic-Langgraph-Crash-course/1-BasicChatbot/: chatbot.ipynb
_02_Agentic-Langgraph-Crash-course/2-HumanAssistance/: humanintheloop.ipynb
_02_Agentic-Langgraph-Crash-course/3-MCPDemoLangchain/: client.py  mathserver.py  weather.py
_02_Agentic-Langgraph-Crash-course/4-CustomMCPServer/: server.py  test_client.py
_02_Agentic-Langgraph-Crash-course/4-Debugging/: agent.py  debugging.ipynb  langgraph.json
_02_Agentic-Langgraph-Crash-course/5-Multimodal/: multiaiagent.ipynb
_03_RAG-Crash-Course/: app.py
_03_RAG-Crash-Course/Notebook/: 1-document.ipynb  2-pdf_loader.ipynb  3-hybrid_search_rag.ipynb
_03_RAG-Crash-Course/agenticrag/: 1-agenticrag_practice.ipynb
_04_Vectorless-RAG-Carsh-course/: 1-PageIndex_Vectorless_RAG_CrashCourse.ipynb
_05_Deep-Agents-Crash-Course/: 1-basicsdeepagent.ipynb  2-contextengineering.ipynb  3-backends.ipynb  4-subagents.ipynb  streamlit2_app.py  streamlit_app.py
_06_AI-Security-Crash-Course/: AI_Engineer_Roadmap.txt  LLM_Gateway_Crash_Course.ipynb  Langchain_Guardrails_Crash_Course.ipynb  RAG_Evalution_Crash_Course.ipynb
_07_Hugging-Face-Course/: 1_Transformer_HuggingFace_Tutorial.ipynb
(+11 files in other folders)
