[project]
name = "AI-Engineering-Bootcamp"
version = "0.1.0"
description = "AI Engineering Bootcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "agents>=1.4.0",
    "chromadb>=1.5.9",
    "deepagents>=0.6.8",
    "einops>=0.8.2",
    "faiss-cpu>=1.14.3",
    "google>=3.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-litellm>=0.7.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-quickjs",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.29",
    "langsmith[claude-agent-sdk,openai-agents]>=0.8.8",
    "librosa>=0.11.0",
    "litellm>=1.89.0",
    "matplotlib>=3.11.0",
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "pageindex>=0.2.8",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
